# h2scm-supply-demand

./: .gitignore  LICENSE  README.md
backend/lambdas/api_run_simulation/: README.md  pyproject.toml
backend/lambdas/api_run_simulation/api_run_simulation/: handler.py  run.py  run_simulation.py
backend/lambdas/api_run_simulation/api_run_simulation/simulation/: __init__.py  simulation_layer.py
backend/lambdas/api_run_simulation/api_run_simulation/simulation/business/: __init__.py  user_input.py  user_layer.py  user_output.py
backend/lambdas/api_run_simulation/api_run_simulation/simulation/logic/: __init__.py  logic_input.py  logic_layer.py  logic_output.py
backend/lambdas/api_run_simulation/api_run_simulation/simulation/query/: __init__.py  query_input.py  query_layer.py  query_output.py
backend/lambdas/api_run_simulation/tests/: test_handler.py  test_simulation.py
backend/lambdas/api_run_simulation/tests/helpers/: fuel.py  logistic.py
backend/lambdas/api_run_simulation/tests/simulation/: test_business_layer.py  test_business_layer_data.py  test_logic_layer.py  test_query_layer.py
backend/lambdas/api_run_simulation/tests/simulation/data/: __init__.py
backend/lambdas/api_run_simulation/tests/simulation/queries/: test_fuel_query.py  test_logistic_query.py
backend/lambdas/layers/simulation/: README.md  pre-build.sh  pyproject.toml
backend/lambdas/layers/simulation/simulation/: run_simulation.py  simulation_data.py
backend/lambdas/layers/simulation/simulation/business/: user_input.py  user_layer.py  user_output.py
backend/lambdas/layers/simulation/simulation/logic/: logic_input.py  logic_layer.py  logic_output.py
backend/lambdas/layers/simulation/simulation/query/: query_input.py  query_layer.py  (+1 more)
backend/lambdas/layers/simulation/tests/: test_business_layer.py  test_business_layer_data.py  test_logic_layer.py  test_query_layer.py  test_simulation.py
backend/src/api_run_simulation/: pre-build.sh  pyproject.toml
backend/src/api_run_simulation/api_run_simulation/: __init__.py  run_simulation.py  simulation.py
backend/src/api_run_simulation/api_run_simulation/schemas/: SimulationInput.json  SimulationResult.json
backend/src/api_run_simulation/api_run_simulation/simulation/: simulation_data.py  simulation_layer.py
backend/src/api_run_simulation/tests/: test_simulation.py
backend/src/api_run_simulation/tests/helpers/: fuel.py
backend/src/api_run_simulation/tests/simulation/: test_business_layer.py  test_logic_layer.py  test_query_layer.py
(+172 files in other folders)
